GearsetPOC/force-app/main/default/objects/GND__c/GND__c.object-meta.xml
<CustomObject>
    <label>GND</label>
    <nameField>
        <displayFormat>GND-{0000}</displayFormat>
        <label>GND</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GND</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>