GearsetPOC/force-app/main/default/objects/GND__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>GND</relationshipLabel>
    <relationshipName>GND</relationshipName>
    <type>Lookup</type>
</CustomField>