GearsetPOC/force-app/main/default/objects/GND__c/fields/Address_CCR__c.field-meta.xml
<CustomField>
    <fullName>Address_CCR__c</fullName>
    <label>Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>