GearsetPOC/force-app/main/default/objects/GND__c/fields/Address_EIL__c.field-meta.xml
<CustomField>
    <fullName>Address_EIL__c</fullName>
    <defaultValue>$User.Street + &quot; &quot; + $User.City + &quot; &quot; + $User.State + &quot; &quot; +  $User.PostalCode + &quot; &quot; +  $User.Country</defaultValue>
    <label>Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>