GearsetPOC/force-app/main/default/objects/GND__c/fields/Address_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Address_Formatted__c</fullName>
    <formula>Account__r.Address_Line_1__c + &quot; &quot; +  Account__r.Address_Line_2__c + &quot; &quot; +  Account__r.Address_Line_3__c + &quot; &quot; +   Account__r.City__c  + &quot; &quot; + Account__r.County_State__c + &quot; &quot; +  Account__r.Post_Code_ZIP__c + &quot; &quot; +  Account__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (Formatted)</label>
    <type>Text</type>
</CustomField>