GearsetPOC/force-app/main/default/objects/GND__c/fields/AmsLon_BP__c.field-meta.xml
<CustomField>
    <fullName>AmsLon_BP__c</fullName>
    <label>AmsLon BP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>