GearsetPOC/force-app/main/default/objects/GND__c/fields/Authorised_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised Representative Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GND (Authorised Representative Name)</relationshipLabel>
    <relationshipName>GND1</relationshipName>
    <type>Lookup</type>
</CustomField>