GearsetPOC/force-app/main/default/objects/GND__c/fields/BP_Discount_Offered__c.field-meta.xml
<CustomField>
    <fullName>BP_Discount_Offered__c</fullName>
    <label>BP % Discount Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>