GearsetPOC/force-app/main/default/objects/GND__c/fields/Contract_YTD_Rev_Eur__c.field-meta.xml
<CustomField>
    <fullName>Contract_YTD_Rev_Eur__c</fullName>
    <label>Contract YTD Rev Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>