GearsetPOC/force-app/main/default/objects/GND__c/fields/Core_BP__c.field-meta.xml
<CustomField>
    <fullName>Core_BP__c</fullName>
    <defaultValue>276.00</defaultValue>
    <label>Core BP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>