GearsetPOC/force-app/main/default/objects/GND__c/fields/Corporate_Client_Representative__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Client_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Client Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Company_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GND</relationshipLabel>
    <relationshipName>GND</relationshipName>
    <type>Lookup</type>
</CustomField>