GearsetPOC/force-app/main/default/objects/GND__c/fields/Email_CCR__c.field-meta.xml
<CustomField>
    <fullName>Email_CCR__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>