GearsetPOC/force-app/main/default/objects/GND__c/fields/Email_EIL__c.field-meta.xml
<CustomField>
    <fullName>Email_EIL__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>