GearsetPOC/force-app/main/default/objects/GND__c/fields/End_Contract__c.field-meta.xml
<CustomField>
    <fullName>End_Contract__c</fullName>
    <formula>IF(ISPICKVAL( Term__c,&quot;One Year&quot;), Start_Contract__c + 364,
IF(ISPICKVAL( Term__c,&quot;Six Month&quot;), Start_Contract__c + 182,
Start_Contract__c + 729))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Contract</label>
    <type>Date</type>
</CustomField>