GearsetPOC/force-app/main/default/objects/GND__c/fields/Fax_AR__c.field-meta.xml
<CustomField>
    <fullName>Fax_AR__c</fullName>
    <label>Fax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>