GearsetPOC/force-app/main/default/objects/GND__c/fields/Job_Title_CCR__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_CCR__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>