GearsetPOC/force-app/main/default/objects/GND__c/fields/Job_Title_EIL__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_EIL__c</fullName>
    <defaultValue>$User.Title</defaultValue>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>