GearsetPOC/force-app/main/default/objects/GND__c/fields/LonAms_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>LonAms_Market_Share__c</fullName>
    <label>LonAms Market Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>