GearsetPOC/force-app/main/default/objects/GND__c/fields/LonBru_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>LonBru_Market_Share__c</fullName>
    <label>LonBru Market Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>