GearsetPOC/force-app/main/default/objects/GND__c/fields/LonPar_BP_RT__c.field-meta.xml
<CustomField>
    <fullName>LonPar_BP_RT__c</fullName>
    <label>LonPar BP RT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>