GearsetPOC/force-app/main/default/objects/GND__c/fields/LonPar_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>LonPar_Market_Share__c</fullName>
    <label>LonPar Market Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>