GearsetPOC/force-app/main/default/objects/GND__c/fields/LY_Vol__c.field-meta.xml
<CustomField>
    <fullName>LY_Vol__c</fullName>
    <label>LY Vol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>