GearsetPOC/force-app/main/default/objects/GND__c/fields/ParLon_BP_RT__c.field-meta.xml
<CustomField>
    <fullName>ParLon_BP_RT__c</fullName>
    <label>ParLon BP RT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>