GearsetPOC/force-app/main/default/objects/GND__c/fields/ParLon_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>ParLon_Market_Share__c</fullName>
    <label>ParLon Market Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>