GearsetPOC/force-app/main/default/objects/GND__c/fields/Phone_CCR__c.field-meta.xml
<CustomField>
    <fullName>Phone_CCR__c</fullName>
    <label>Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>