GearsetPOC/force-app/main/default/objects/GND__c/fields/Phone_EIL__c.field-meta.xml
<CustomField>
    <fullName>Phone_EIL__c</fullName>
    <defaultValue>$User.MobilePhone</defaultValue>
    <label>Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>