GearsetPOC/force-app/main/default/objects/GND__c/fields/Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Country__c</fullName>
    <formula>Account__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Country</label>
    <type>Text</type>
</CustomField>