GearsetPOC/force-app/main/default/objects/GND__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>Two Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>