GearsetPOC/force-app/main/default/objects/GND__c/fields/Yr_1_End_Disc__c.field-meta.xml
<CustomField>
    <fullName>Yr_1_End_Disc__c</fullName>
    <formula>Start_Contract__c + 364</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yr 1 End Disc</label>
    <type>Date</type>
</CustomField>