GearsetPOC/force-app/main/default/objects/GND__c/fields/Yr_2_Start_Disc__c.field-meta.xml
<CustomField>
    <fullName>Yr_2_Start_Disc__c</fullName>
    <formula>Start_Contract__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yr 2 Start Disc</label>
    <type>Date</type>
</CustomField>