GearsetPOC/force-app/main/default/objects/GND__c/recordTypes/AMS_Routes.recordType-meta.xml
<RecordType>
    <fullName>AMS_Routes</fullName>
    <active>true</active>
    <label>AMS Routes</label>
</RecordType>