GearsetPOC/force-app/main/default/objects/GND__c/recordTypes/Core_Routes.recordType-meta.xml
<RecordType>
    <fullName>Core_Routes</fullName>
    <active>true</active>
    <label>Core Routes</label>
</RecordType>