GearsetPOC/force-app/main/default/objects/GND__c/listViews/All_GND_s.listView-meta.xml
<ListView>
    <fullName>All_GND_s</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All GND&#39;s</label>
    <sharedTo>
        <role>Sales_Admin</role>
    </sharedTo>
</ListView>